test/valid/59809_divide_by_zero/divide_by_zero.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit = 
    var x : Int = 10;
    var y : Int = 0;
    print(x/y)