test/invalid-semantics/59809_not_a_record_projection/not_a_record_projection.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var x : Int = 42;
    print(x.value)